Fixed align on phones

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -17,7 +17,6 @@
     max-width: 1400px;
 
     @media (max-width: 700px) {
-        text-align: unset;
         max-width: 600px;
 
         p {
